<resources>
    <!--App Resources-->
    <string name="app_name">CleanReceipt</string>
    <string name="toHome">Back</string>
    <string name="close">Close</string>

    <!--Nav Drawer strings-->
    <string name="Home">Home</string>
    <string name="budgetSetup">Budget Setup</string>
    <string name="budgetReview">Budget Review</string>
    <string name="receiptEntry">Receipt Entry</string>
    <string name="receiptReview">Receipt Review</string>
    <string name="keepSignedIn">Keep me signed in</string>
    <string name="location">Location</string>


    <!--Receipt Entry Resources-->
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="takePicture">Take Picture</string>
    <string name="uploadImage">Upload Image</string>
    <string name="delete">Delete</string>

    <!--Budget Entry Resources-->
    <string name="monthYear">Month/Year</string>
    <string name="Date">Date</string>

    <string name="addCategory">+Add Category</string>
    <string name="budgetTotal">Total:</string>

    <!--Login Page Resources-->
    <string name="LoginHeader">Welcome to CleanReceipt</string>
    <string name="Login">Log in</string>
    <string name="Signup">Sign up</string>
    <string name="Username">Username </string>
    <string name="Password">Password </string>
    <string name="UsernameEntry">Username: </string>
    <string name="PasswordEntry">Password: </string>
    <string name="reenterPassword">Re-enter Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>

    <!--Home Page Resources-->
    <string name="HomeHeader">CleanReceipt</string>
    <string name="ToReceiptEntry">Enter a New Receipt!</string>
    <string name="ToReceiptHistory">Check Your Receipt History</string>
    <string name="ToBudget">Set Up Your Monthly Budget</string>
    <string name="ToLogin">Return to Login Page</string>
    <string name="ThisMonth">This Month\'s Budget</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>

    <!--Receipt Review Resources-->
    <string name="receiptView">Receipt View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Categories">
        <item>Groceries</item>
        <item>Rent</item>
        <item>Phone</item>
        <item>Car Inssurance </item>
        <item>Utilities</item>
        <item>Books</item>
        <item>Free Spending</item>
        <item>Emergency</item>
        <item>Gas</item>
        <item>Category</item>
    </string-array>

</resources>
