<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:id="@+id/receiptConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    tools:context="com.example.cleanreceipt.UploadReceipt">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiptNameTextInputLayout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/receiptDateTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/receiptNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiptPriceTextInputLayout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/receiptCategoryTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/receiptPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/price"
            android:inputType="text|number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiptCategoryTextInputLayout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/receiptLocationTextInputLayout"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Spinner
            android:id="@+id/receiptCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancelNewReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/saveNewReceipt" />

    <Button
        android:id="@+id/saveNewReceipt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="85dp"
    android:layout_marginRight="85dp"
    android:text="@string/save"
    app:layout_constraintBaseline_toBaselineOf="@+id/cancelNewReceipt"
    app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/uploadedImage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="120dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelNewReceipt"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiptLocationTextInputLayout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadedImage"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <AutoCompleteTextView
            android:id="@+id/receiptLocationAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/imageProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadedImage" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiptDateTextInputLayout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/receiptPriceTextInputLayout"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/receiptDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789/"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="text|number"
            android:onClick="setDate" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/takePicture"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="26dp"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/cancelNewReceipt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadedImage"
        app:srcCompat="@drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/uploadImage"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="26dp"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/saveNewReceipt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadedImage"
        app:srcCompat="@android:drawable/ic_menu_upload" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
