<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_background"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/budgetMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:cursorVisible="false"
            android:ems="10"
            android:hint="@string/monthYear"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <LinearLayout
            android:id="@+id/categoryContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budgetMonth"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"></LinearLayout>

        <Button
            android:id="@+id/addCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/budgetMonth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/addCategory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryContainer"
            app:layout_constraintVertical_bias="0.236"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/cancelBudgetSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/budgetMonth"
            android:layout_centerVertical="true"
            android:layout_marginEnd="87dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/addCategory"
            app:layout_constraintTop_toBottomOf="@+id/addCategory"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/saveBudgetSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/budgetMonth"
            android:layout_below="@+id/addCategory"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="87dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="@+id/addCategory"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCategory"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/totalBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="8dp"
            android:text="@string/budgetTotal"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/addCategory"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryContainer"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>